Fixed table rendering issue on firefox.

--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -33,3 +33,7 @@ body { padding-top: 60px; }
     margin-left: 5px;
   }
 }
+
+table {
+  float: left;
+}
